2007-11-30  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-rip.in: More bug fixes:
	   o If the CUPS-style duples option
	     "-o sides={one|two}-sided[-{long|short}-edge]" was supplied,
	     the "Duplex" option could be set to "0", "LongEdge", or
	     "ShortEdge", which do not exist in the "Duplex" options in
	     PPD files (Thanks to Ricoh Japan for reporting this bug). 
	   o Now all of "LongEdge", "DuplexNoTumble", or "ShortEdge", 
	     "DuplexTumble", are converted to each other if supplied as 
	     value to an enumerated choice option (usually "Duplex") and
	     this value is not in the list of choices.
	   o Removed the unused variable "$rangeend" from the
	     parsepageranges() function.
	   o Reset the best score for finding the narrowest page range
	     before treating each option, not only before the first
	     option. Now jobs with page overrides on more than one
	     option are executed correctly.
2007-11-23  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-rip.in: Several fixes for bugs found while developing
	  the foomatic-rip test suite for the LSB 3.2:
	   o If an option had the default value "0" (enumerated choice,
	     numerical, string) in the PPD file, the first choice from
	     the list was set as default and not "0".
	   o When assigning a non-integer number to an integer option,
	     the "%%BeginFeature: ..." line of the option inserted into 
	     the PostScript data stream still contained the non-integer
	     value. Only the value in the code piece was converted to
	     integer.
	   o If a non-integer "*FoomaticRIPDefault..." was given for an
	     integer option it was not converted to integer. 
	   o Boolean options had "0" and "1" as values in the
	     "%%BeginFeature: ..." lines and not "False" and "True".
	   o PPD-supplied JCL/PJL options did not get merged with
	     driver-generated JCL/PJL options when there were spaces
	     between the JCL command and the "=" (ex: "@PJL SET TRAY = 1").